Add bump version and publish GitHub Action

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asana",
+  "name": "jv-asana-test",
   "version": "1.0.0",
   "description": "Official NodeJS and BrowserJS client for the Asana API",
   "main": "index.js",
