--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: "8.x"
       - name: Install gulp
-        run: npm i gulp --save-dev
+        run: npm i -g gulp
       - name: Run deploy script
         run: |
           git config user.name github-actions
