--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,7 @@ jobs:
         run: npm i -g gulp
       - name: Run deploy script
         run: |
+          npm i
           git config user.name github-actions
           git config user.email github-actions@github.com
           gulp bump-${{ inputs.bumpVersion }}
